fixes /users page grid spacing

--- a/src/components/Users/userDetail.module.scss
+++ b/src/components/Users/userDetail.module.scss
@@ -51,6 +51,7 @@
 .detailedCards {
   // background-color: #f6efe8;
   background-color: #f5f5f5;
+  justify-content: center;
 
   padding: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.377);
